--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,11 @@ body {
   justify-content: space-between;
   align-items: center;
   margin-bottom: 20px;
-  
+}
+
+.app__header > h1 {
+  color: #fc3c3c;
+  font-size: 2rem;
 }
 
 .app__stats {
@@ -24,6 +28,10 @@ body {
   padding: 20px;
 }
 
+.app__dropdown {
+  background-color: white;
+}
+
 @media (max-width: 990px) {
   .app {
     flex-direction: column;
@@ -35,5 +43,25 @@ body {
 }
 
 .app__right {
+  display: flex;
+  flex-direction: column;
+}
 
+.app__right > h3 {
+  margin-top: 5px;
+}
+
+.app__right .MuiCardContent-root {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+}
+
+.app__graph {
+  flex-grow: 1;
+}
+
+.app__graphTitle {
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
